Nye versjoner av felles mm (#466)